# PE-Planner

./: CMakeLists.txt  README.md  build.sh  note.md
maps/: map1.txt  map2.txt  map3.txt
meshes/: fan.stl
modules/bspline/: uniform_bspline.hpp
modules/bspline_opt/: bspline_optimizer.cpp  bspline_optimizer.hpp  bspline_optimizer2.cpp  bspline_optimizer2.hpp
modules/common/: rotation_math.hpp
modules/disturbance_observer/: gpiobserver.hpp
modules/kinodynamic_astar/: kinodynamic_astar.cpp  kinodynamic_astar.hpp
modules/lbfgs/: lbfgs.hpp
modules/logger/: logger.hpp
modules/map/: map.cpp  map.hpp  sdf.hpp
modules/mpc/: nominal_mpc.hpp
modules/mpcc/: nominal_mpcc.cpp  nominal_mpcc.hpp
modules/px4_interface/: px4_interface.cpp  px4_interface.hpp
modules/quadrotor_dynamics/: extended_quad_dynamic.hpp  nominal_quad_dynamic.hpp  quad_simulator.hpp
modules/ros_interface/: ros_interface.cpp  ros_interface.hpp
modules/tracker/: pid_tracker.hpp
rviz/: rviz.rviz
src/: map_generator.cpp  map_viewer.cpp  planner_px4_main.cpp  utils.hpp
third/matplotlib/: matplotlibcpp.hpp
